--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,27 +6,33 @@
 h1 {
   font-size: 70px;
   font-weight: bold;
-  color: white;
 }
 
 h2 {
   font-size: 32px;
   font-weight: bold;
-  color: gray;
 }
 
 h3 {
   font-size: 23px;
   font-weight: bold;
-  color: gray;
 }
 
 .banner {
-  background-image: url("resources/images/the-flatiron-building.png");
+  background-image: url("../images/the-flatiron-building.png");
+  background-repeat: no-repeat;
+  color: white;
 }
 
 .nav {
   font-size: 18px;
+  color: white;
+  list-style: none;
+  font-weight: bold;
+  line-height: 1.8;
+}
+
+.nav a {
   color: white;
 }
 
