--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,6 +18,10 @@ h3 {
   font-weight: bold;
 }
 
+p {
+  font-size: 14px;
+}
+
 .banner {
   background-image: url("../images/the-flatiron-building.png");
   background-repeat: no-repeat;
@@ -38,6 +42,15 @@ h3 {
 
 .footer {
   background-color: dimgray;
+  color: white;
+}
+
+.footer p {
   font-size: 11px;
+  text-align: left;
+  color: white;
+}
+
+.footer a {
   color: white;
 }
